Move 5.1 to the current release
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-1.md
+++ b/site/snippets/release-notes/5-1.md
@@ -1,10 +1,9 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.1 (Expected September 2024)
+## Release 5.1 (October 2024)
 
-_**These are DRAFT release notes.  The notes will be updated until & when 5.1 is released**_
-
+Release 5.1 builds on the simplification theme from release 5.0.  This include 
 ??? functional "Open Metadata Types"
     * The [ConnectorType](/types/2/0201-Connectors-and-Connections) entity type has a new attribute called *supportedDeployedImplementationType* which replaces *deployedImplementationType to separate the technology it supports from other uses of *deployedImplementationType* that identify its implementation technology.
     * The [CatalogTarget](/types/4/0464-Dynamic-Integration-Groups) relationship is now multi-link which means it is possible to have multiple instances of this relationship between the same two entities.  It also has two new attributes: *permittedSynchronization* and *deleteMethod*.
@@ -14,6 +13,9 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.1 is
 
 ??? functional "Unity Catalog Support"
     There are new [survey services and integration connectors](/connectors/unity-catalog) to support the new open-source Unity Catalog (UC).
+
+??? danger "Technology type for file directories changed from "FileFolder" to "File System Directory"
+    [Automated Curation OMVS](/services/omvs/automated-curation/overview) provides methods to query the connectors and templates for different types of technology types.  The names of the technologies come from the [Deployed Implementation Type](/concepts/deployed-implementation-type) reference values.  The value for a directory (folder) in a file system was "FileFolder" in earlier releases which is the name of the open metadata type used to catalog these types of resources.  The technology name has been changed to "File System Directory" to better reflect the name of the technology.
 
 ??? functional "Smarter integration daemon"
     In addition to the regular refreshes, the integration daemon will refresh an integration connector whenever a new catalog target is attached.
