--- a/site/snippets/release-notes/5-2.md
+++ b/site/snippets/release-notes/5-2.md
@@ -1,12 +1,15 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.2 (Expected September 2024)
+## Release 5.2 (Expected December 2024)
 
 _**These are DRAFT release notes.  The notes will be updated until & when 5.2 is released**_
 
 ??? functional "Open Metadata Types"
     * Add type updates here
+
+??? functional "Support for user authentication via the secrets store connectors"
+    [Secret Store Connectors](/concepts/secret-store-connector) are now able to support the authentication of users calling the [Open Metadata View Services (OMVS)](/services/omvs).
 
 ??? functional "New View Service: Notification Manager OMVS"
     [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [Context Events](/concepts/context-event).
