Add missing pices from 5.1 release notes
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-0.md
+++ b/site/snippets/release-notes/5-0.md
@@ -121,7 +121,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
     [Action Author OMVS](/services/omvs/action-author/overview) is a new view service for managing the definitions of governance action types and and governance action processes.
 
 ??? functional "New View Service: Automated Curation OMVS"
-    [Automated Curation OMVS](/services/omvs/automated-curation/overview) is a new view service that enable the user to set up integration connectors in an integration daemon, run engine actions and governance action processes.
+    [Automated Curation OMVS](/services/omvs/automated-curation/overview) is a new view service that enables the user to set up integration connectors in an integration daemon, run engine actions and governance action processes.
 
 ??? functional "New View Service: Feedback Manager OMVS"
     [Feedback Manager OMVS](/services/omvs/feedback-manager/overview) is a new view service that supports the management of feedback (comments, likes, informal tags, notelogs and reviews) from users.  The feedback support in Glossary Browser OMVS has been removed.
