--- a/site/snippets/release-notes/5-1.md
+++ b/site/snippets/release-notes/5-1.md
@@ -14,6 +14,19 @@ Release 5.1 builds on the simplification theme from release 5.0.  This include
 ??? functional "Unity Catalog Support"
     There are new [survey services and integration connectors](/connectors/unity-catalog) to support the new open-source Unity Catalog (UC).
 
+??? functional "New content packs for connectors, templates amd reference data"
+    This release creates specialized content packs for different types of technologies.  Within the content pack are the connector and governance service configurations, plus templates and reference data to be able to survey, synchronize metadata and govern that type of technology.  The content packs are as follows:
+
+    * [Apache Atlas Content Pack](/content-packs/apache-atlas-content-pack/overview)
+    * [Apache Kafka Content Pack](/content-packs/apache-kafka-content-pack/overview)
+    * [APIs Content Pack](/content-packs/apis-content-pack/overview)
+    * [Observability Content Pack](/content-packs/observability-content-pack/overview)
+    * [PostgreSQL Content Pack](/content-packs/postgres-content-pack/overview)
+    * [Unity Catalog Content Pack](/content-packs/unity-catalog-content-pack/overview)
+
+??? functional "New View Service: Runtime Manager OMVS"
+    [Runtime Manager OMVS](/services/omvs/runtime-manager/overview) is a new view service that enable the user to retrieve reports from different [OMAG Server Platforms](/concepts/omag-server-platform) and [OMAG Servers](/concepts/omag-server) on their configuration and runtime status.  It is also possible to perform specific types of actions on these systems depending on their type.  For example, it is possible to start and stop servers on a platform, load [archives](/concepts/open-metadata-archive) into a [metadata access store](/concepts/metadata-access-store), restart integration connectors on an [integration daemon](/concepts/integration-daemon), refresh the engine configuration in an [Engine Host](/concepts/engine-host) server.
+
 ??? danger "Technology type for file directories changed from "FileFolder" to "File System Directory"
     [Automated Curation OMVS](/services/omvs/automated-curation/overview) provides methods to query the connectors and templates for different types of technology types.  The names of the technologies come from the [Deployed Implementation Type](/concepts/deployed-implementation-type) reference values.  The value for a directory (folder) in a file system was "FileFolder" in earlier releases which is the name of the open metadata type used to catalog these types of resources.  The technology name has been changed to "File System Directory" to better reflect the name of the technology.
 
