Introduction to Egeria's mermaid diagrams
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-2.md
+++ b/site/snippets/release-notes/5-2.md
@@ -6,22 +6,17 @@
 _**These are DRAFT release notes.  The notes will be updated until & when 5.2 is released**_
 
 ??? functional "Open Metadata Types"
-    * Add type updates here
+    * There are two new asset types to support Unity Catalog models: *DeployedAnalyticsModel* and *AnalyticsModelRun* are found in model [0264 Analytical Models](/types/2/0265-Analytics-Assets/).
 
 ??? functional "Support for user authentication via the secrets store connectors"
     [Secret Store Connectors](/concepts/secret-store-connector) are now able to support the authentication of users calling the [Open Metadata View Services (OMVS)](/services/omvs).
 
-??? functional "New View Service: Notification Manager OMVS"
-    [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [Context Events](/concepts/context-event).
+??? functional "Extended support for Unity Catalog release 0.2.0"
+    The Unity catalog connectors now work with the secrets store.  They also support models, update requests and catalog the schemas of tables as well as the input/output parameters and dependencies of a function.
 
-??? functional "New Engine Service: Context Event OMES"
-    [Context Event OMES](/services/omes/context-event/overview) supports the running of [Context Event Services](/concepts/context-event-service).
+??? functional "Support for mermaid visualization"
+    [Mermaid](https://mermaid.js.org/) is a markdown extension for representing diagrams using structured text that can then be rendered in a JavaScript environment.  Selected [Open Metadata View Services(OMVS)](/services/omvs) REST API calls produce the mermaid markdown to render an illustration of the metadata elements returned.  See [Mermaid Diagrams](/user-interfaces/mermaid/overview) for more details. 
 
-??? functional "New View Service: Data Discovery OMVS"
-    [Data Discovery OMVS](/services/omvs/data-discovery/overview) supports the creation of data specs and saved searches.
-
-??? functional "New View Service: Reference Data OMVS"
-    [Reference Data OMVS](/services/omvs/reference-data/overview) supports the query and maintenance of code values and reference data.
 
 
 
