Change marker for placeholder variables
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-2.md
+++ b/site/snippets/release-notes/5-2.md
@@ -7,6 +7,9 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.2 is
 
 ??? functional "Open Metadata Types"
     * There are two new asset types to support Unity Catalog models: *DeployedAnalyticsModel* and *AnalyticsModelRun* are found in model [0264 Analytical Models](/types/2/0265-Analytics-Assets/).
+    * The following lineage relationships have a new attribute called *label* to use when visualizing lineage graphs: [DataFlow](/types/7/0750-Data-Passing), [ControlFlow](/types/7/0750-Data-Passing), [ProcessCall](/types/7/0750-Data-Passing), [UltimateSource](/types/7/0755-Ultimate-Source-Destination), and [LineageMapping](/types/7/0770-Lineage-Mapping).
+    * There is a new type calling [ActorRole](/types/1/0118-Actor-Roles) to represent a role that a person, team or software executable can perform in the governance fabric.  It has subtypes for *PersonRole*, *TeamRole* and *ITProfileRole* along with relationships to connect them to their respective *ActorProfiles*.
+    * The roles for a team are now in [model 0119 - Team Roles](/types/1/0119-Team-Roles)
 
 ??? functional "Support for user authentication via the secrets store connectors"
     [Secret Store Connectors](/concepts/secret-store-connector) are now able to support the authentication of users calling the [Open Metadata View Services (OMVS)](/services/omvs).
@@ -17,7 +20,19 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.2 is
 ??? functional "Support for mermaid visualization"
     [Mermaid](https://mermaid.js.org/) is a markdown extension for representing diagrams using structured text that can then be rendered in a JavaScript environment.  Selected [Open Metadata View Services(OMVS)](/services/omvs) REST API calls produce the mermaid markdown to render an illustration of the metadata elements returned.  See [Mermaid Diagrams](/user-interfaces/mermaid/overview) for more details. 
 
+??? functional "New open metadata native repository based on PostgreSQL"
+    This release brings you a new repository choice.  There is now a PostgreSQL backed repository that offers fast bi-temporal support for storing open metadata.  The repository is stored in its own database schema.  When a server configured to use this repository type starts up, its postgreSQL repository connector connects to the database (using a supplied secrets store) and defines the tables/columns it needs in the database schema.  It manages a control table to ensure it is only used by the designated server.  There are six other tables defined: two for entities, two for classifications and two for relationships.  More details on this repository can be found at [PostgreSQL Repository Connector](/connectors/repository/postgres/overview).
 
+??? danger "New delimiters for [placeholder variables](/concepts/placeholder/#placeholder-variables)"
+    The latest level of IntelliJ only allows variables in JSON request bodies that are delimited with `{{` and `}}` to be used in an HTTP client collection if the value is defined in either an environment or directly in the HTTP Client collection file.  This change mean's that Egeria's [placeholder variable](/concepts/placeholder/#placeholder-variables) support no longer works in an HTTP client collection.  As a result, Egeria's placeholder variable support has been updated to use `~{` and `}~` as placeholder variable delimiters.
+
+??? danger "Changes to the Open Metadata Repository Services (OMRS)"
+    The implementation of the PostgreSQL Repository connector uncovered two errors in the OMRS:
+
+    * The metadata collection id was not being set up in an entity's classifications.  This means they were effectively "local cohort", and updatable by any cohort member.  Classifications are now assigned their metadata collection Id when they are created.
+    * Attributes that are of type enum did not have their typeGUID and typeName set up - this meant it was not possible to know which enum typeDef to use.  It was not noticed before because the egeria services above the OMRS were awary of the typeDef where the attribute was being used and could infer the type.  Enum attributes now have the typeGUID/typeName set up correctly.
+
+    The impact of these fixes has caused some minor changes to the OMRSRepositoryHelper interface.  This will only affect implementations of the repository connector.
 
 
 
