Contribution records for teams and automation
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-2.md
+++ b/site/snippets/release-notes/5-2.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.2 (Expected December 2024)
+## Release 5.2 (December 2024)
 
 _**These are DRAFT release notes.  The notes will be updated until & when 5.2 is released**_
 
@@ -10,11 +10,12 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.2 is
     * The following lineage relationships have a new attribute called *label* to use when visualizing lineage graphs: [DataFlow](/types/7/0750-Data-Passing), [ControlFlow](/types/7/0750-Data-Passing), [ProcessCall](/types/7/0750-Data-Passing), [UltimateSource](/types/7/0755-Ultimate-Source-Destination), and [LineageMapping](/types/7/0770-Lineage-Mapping).
     * There is a new type calling [ActorRole](/types/1/0118-Actor-Roles) to represent a role that a person, team or software executable can perform in the governance fabric.  It has subtypes for *PersonRole*, *TeamRole* and *ITProfileRole* along with relationships to connect them to their respective *ActorProfiles*.
     * The roles for a team are now in [model 0119 - Team Roles](/types/1/0119-Team-Roles)
+    * The *ContributionRecord* entity type is now in [model 0125 - Contribution](/types/1/0125-Contribution).  A new *Contribution* relationship has been defined to allow contribution records to be attached to any type of actor profile.  The *PersonalContribution* relationship has been deprecated.
 
 ??? functional "Support for user authentication via the secrets store connectors"
     [Secret Store Connectors](/concepts/secret-store-connector) are now able to support the authentication of users calling the [Open Metadata View Services (OMVS)](/services/omvs).
 
-??? functional "Extended support for Unity Catalog release 0.2.0"
+??? functional "Extended support for Unity Catalog release 0.3.0"
     The Unity catalog connectors now work with the secrets store.  They also support models, update requests and catalog the schemas of tables as well as the input/output parameters and dependencies of a function.
 
 ??? functional "Support for mermaid visualization"
