Updates to the roadmap page
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/june-2024.md
+++ b/site/docs/release-notes/june-2024.md
@@ -32,7 +32,7 @@ Python is growing in popularity, particularly amongst data professionals.  Egeri
 * The operational services for configuring, starting and stopping servers - and querying their status.
 * The [view services](/services/omvs) to work with open metadata and governance services.  These services allow you to query and maintain open metadata, and configure and run open governance services such as surveys and automated cataloguing.
 
-Pyegeria also provides [monitoring widgets](/user-interfaces/python-widgets/overview).
+Pyegeria also provides [monitoring widgets](/user-interfaces/hey-egeria/overview).
 
 Pyegeria can be downloaded and installed from [PyPI](https://pypi.org/project/pyegeria/)
 
@@ -61,7 +61,7 @@ This website is built form [the brain](https://www.thebrain.com/) technology.  T
 
 ## Full release notes for V5.0
 
-The full release notes for version 5.0 can be found on [Egeria's website](https://egeria-project.org/release-notes/5-0/).
+The full release notes for version 5.0 can be found on [Egeria's website](https://egeria-project.org/release-notes/previous/#release-50-july-2024).
 
 ## Future plans
 
