--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -1,9 +1,9 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.3 (Expected March 2025)
+## Release 5.3 (March 2025)
 
-_**These are DRAFT release notes.  The notes will be updated until & when 5.2 is released**_
+_**These are DRAFT release notes.  The notes will be updated until & when 5.3 is released**_
 
 ??? functional "Open Metadata Types"
     * add changes here
