--- a/site/snippets/release-notes/5-2.md
+++ b/site/snippets/release-notes/5-2.md
@@ -1,9 +1,9 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.2 (December 2024)
+## Release 5.2 (January 2025)
 
-_**These are DRAFT release notes.  The notes will be updated until & when 5.2 is released**_
+Release 5.2 continues the theme of the version 5.x releases with a focus on simplifying user experience at all levels - from the contributors to Egeria, dev-ops teams setting up Egeria and data professionals using Egeria in their daily work. Of particular note, 5.2 adds a new type of open metadata repository based on PostgreSQL and visualizations with Mermaid.
 
 ??? functional "Open Metadata Types"
     * There are two new asset types to support Unity Catalog models: *DeployedAnalyticsModel* and *AnalyticsModelRun* are found in model [0264 Analytical Models](/types/2/0265-Analytics-Assets/).
