Add information and updates to information supply chains and solution components
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -6,10 +6,13 @@
 _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is released**_
 
 ??? functional "Open Metadata Types"
-    * add changes here
+    * The [ExternalId](/types/0017-External-Identifiers) entity has a new attribute called *externalInstanceTypeName* to allow the capture of the type name of an instance from a third party system.
+    * A new entity type called [*SolutionActorRole*](/types/7/0730-Solution-Components) allows new roles that interact with a solution to be modelled.
+    * A new relationship called [*SolutionComponentActor*](/types/7/0730-Solution-Components) allows the [*Actors*](/types/1/0110-Actors) using a solution component to be identified.
+    * The [*SolutionComponent*](/types/7/0730-Solution-Components) entity has a new attribute called *solutionComponentType* to allow the solution architect to distinguish between different types of components.
 
 ??? functional "New View Service: Notification Manager OMVS"
-    [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [Context Events](/concepts/context-event).
+    [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [ToDos](/concepts/to-do).
 
 ??? functional "New Engine Service: Context Event OMES"
     [Context Event OMES](/services/omes/context-event/overview) supports the running of [Context Event Services](/concepts/context-event-service).
