Add new information supply chain attributes
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -10,6 +10,12 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * A new entity type called [*SolutionActorRole*](/types/7/0730-Solution-Components) allows new roles that interact with a solution to be modelled.
     * A new relationship called [*SolutionComponentActor*](/types/7/0730-Solution-Components) allows the [*Actors*](/types/1/0110-Actors) using a solution component to be identified.
     * The [*SolutionComponent*](/types/7/0730-Solution-Components) entity has a new attribute called *solutionComponentType* to allow the solution architect to distinguish between different types of components.
+    * The [*InformationSupplyChain*](/types/7/0720-Information-Supply-Chains) relationship has a new attribute called *label* for use in lineage graphs.
+    * The [*SolutionLinkingWire*](/types/7/0735-Solution-Posts-and-Wires) relationship has new attributes *label* and *description* for use in lineage graphs.
+    * The [*FileSystem*](/types/0/0056-Resource-Managers) classification has new attributes *canonicalMountPoint* and *actualMountPoint* for normalizing file path names in a heterogeneous open metadata ecosystem.
+
+??? functional "New View Service: Solution Architect OMVS"
+    [Solution Architect OMVS](/services/omvs/solution-architect/overview) supports the management and querying of [Information Supply Chains](/concepts/information-supply-chain) and [solution components](/concepts/solution-component).
 
 ??? functional "New View Service: Notification Manager OMVS"
     [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [ToDos](/concepts/to-do).
