--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -13,6 +13,7 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * The [*InformationSupplyChain*](/types/7/0720-Information-Supply-Chains) relationship has a new attribute called *label* for use in lineage graphs.
     * The [*SolutionLinkingWire*](/types/7/0735-Solution-Posts-and-Wires) relationship has new attributes *label* and *description* for use in lineage graphs.
     * The [*FileSystem*](/types/0/0056-Resource-Managers) classification has new attributes *canonicalMountPoint* and *actualMountPoint* for normalizing file path names in a heterogeneous open metadata ecosystem.
+    * A new relationship called [*SchemaAttributeLineageMapping*](/types/7/0770-Lineage-Mapping)provides a dedicated relationship for column-level lineage.
 
 ??? functional "New View Service: Solution Architect OMVS"
     [Solution Architect OMVS](/services/omvs/solution-architect/overview) supports the management and querying of [Information Supply Chains](/concepts/information-supply-chain) and [solution components](/concepts/solution-component).
