Change governance domain definitions to use valid values
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/3-2.md
+++ b/site/snippets/release-notes/3-2.md
@@ -35,10 +35,9 @@
 
 ???+ types "Type changes: :material-plus-circle: added, :material-adjust: modified, :material-alert-circle: deprecated"
 
-
     ??? added "Governance Classification Levels"
         New types for setting up the list of status for governance definitions.
-        See new type descriptions in model [0421](/types/4/0421-Governance-Classification-Levels.md).
+        See new type descriptions in model 0422.
 
 
 
