--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -13,16 +13,18 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * The [*InformationSupplyChain*](/types/7/0720-Information-Supply-Chains) relationship has a new attribute called *label* for use in lineage graphs.
     * The [*SolutionLinkingWire*](/types/7/0735-Solution-Posts-and-Wires) relationship has new attributes *label* and *description* for use in lineage graphs.
     * The [*FileSystem*](/types/0/0056-Resource-Managers) classification has new attributes *canonicalMountPoint* and *actualMountPoint* for normalizing file path names in a heterogeneous open metadata ecosystem.
-    * A new relationship called [*SchemaAttributeLineageMapping*](/types/7/0770-Lineage-Mapping)provides a dedicated relationship for column-level lineage.
+    * A new relationship called [*DataMapping*](/types/7/0770-Lineage-Mapping) provides a dedicated relationship for fine-grained (column-level) lineage.
+    * Types *GovernanceDomainDefinition*, *GovernanceDomainSet*, *GovernanceClassificationLevel*, *GovernanceClassificationSet*, *GovernanceStatusSet* and *GovernanceStatusLevel* have been deprecated in favour of using standard valid metadata values.
 
 ??? functional "New View Service: Solution Architect OMVS"
     [Solution Architect OMVS](/services/omvs/solution-architect/overview) supports the management and querying of [Information Supply Chains](/concepts/information-supply-chain) and [solution components](/concepts/solution-component).
 
+??? functional "New View Service: Governance Officer OMVS"
+    [Governance Officer OMVS](/services/omvs/governance-officer/overview) supports the maintenance of the metadata for a governance domain.
+
+
 ??? functional "New View Service: Notification Manager OMVS"
     [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [ToDos](/concepts/to-do).
-
-??? functional "New Engine Service: Context Event OMES"
-    [Context Event OMES](/services/omes/context-event/overview) supports the running of [Context Event Services](/concepts/context-event-service).
 
 ??? functional "New View Service: Data Discovery OMVS"
     [Data Discovery OMVS](/services/omvs/data-discovery/overview) supports the creation of data specs and saved searches.
