Removal of placeholder Context Event Framework
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -24,7 +24,7 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
 
 
 ??? functional "New View Service: Notification Manager OMVS"
-    [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [ToDos](/concepts/to-do).
+    [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [ToDos](/concepts/to-do) and [IncidentReports](/concepts/incident-report).
 
 ??? functional "New View Service: Data Discovery OMVS"
     [Data Discovery OMVS](/services/omvs/data-discovery/overview) supports the creation of data specs and saved searches.
