Add Classification Explorer OMVS
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -19,9 +19,11 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
 ??? functional "New View Service: Solution Architect OMVS"
     [Solution Architect OMVS](/services/omvs/solution-architect/overview) supports the management and querying of [Information Supply Chains](/concepts/information-supply-chain) and [solution components](/concepts/solution-component).
 
+??? functional "New View Service: Classification Explorer OMVS"
+    [Classification Explorer OMVS](/services/omvs/classification-explorer/overview) supports enables the caller to issue queries to understand how metadata elements are linked and classified.
+
 ??? functional "New View Service: Governance Officer OMVS"
     [Governance Officer OMVS](/services/omvs/governance-officer/overview) supports the maintenance of the metadata for a governance domain.
-
 
 ??? functional "New View Service: Notification Manager OMVS"
     [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [ToDos](/concepts/to-do) and [IncidentReports](/concepts/incident-report).
@@ -32,8 +34,66 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
 ??? functional "New View Service: Reference Data OMVS"
     [Reference Data OMVS](/services/omvs/reference-data/overview) supports the query and maintenance of code values and reference data.
 
-
-
-
-
-
+??? danger "Removal of deprecated types and attributes"
+    As Egeria has developed over the years, the type system has also evolved.  This has meant that some of the original types have been deprecated in favour of new types.  At this point in time, none of the egeria code (either in the Java runtime, samples or python pyegeria libraries) and so this is a good time to slim down the type system by removing the deprecated types and attributes.  The following has been removed:
+    
+    * GovernanceDomainDescription
+    * GovernanceDomainSet
+    * GovernanceClassificationLevel
+    * GovernanceClassificationSet    
+    * GovernanceStatusSet
+    * GovernanceStatusLevel
+    * HostLocation
+    * ContentManager
+    * NamingConventionRule
+    * RelationalColumnType
+    * RuntimeForProcess
+    * SoftwareServerPlatformDeployment
+    * DeployedVirtualContainer
+    * HostNetwork
+    * SoftwareServerDeployment
+    * TermISATypeOFRelationship
+    * GlossaryTermEvolution
+    * HostOperatingPlatform
+    * DataStoreEncoding
+    * PersonalContribution
+    * AssetServerUse
+    * ProcessInput
+    * SoftwareServerSupportedCapability
+    * SchemaTypeSnippet
+    * EngineActionExecutor
+    * TabularColumnType
+    * DesignModelElementOwnership
+    * ProcessOutput
+    * ProjectScope
+    * SimpleDocumentType
+    * DesignModelGroupOwnership
+    * DesignModelGroupHierarchy
+    * StructDocumentType
+    * MapDocumentType
+    * KnownDuplicateLink
+    * BoundedSchemaType
+    * ArraySchemaType
+    * SetSchemaType
+    * BoundedSchemaElementType
+    * ArrayDocumentType
+    * SetDocumentType
+    * GovernanceConfidentialityLevel
+    * SubjectAreaGovernance
+    * ZoneGovernance
+    * RelationalView
+    * DerivedSchemaAttribute
+    * SchemaQueryImplementation
+    * DerivedRelationalColumn
+    * SchemaLinkElement
+    * LinkedType
+    * SchemaLinkToType
+    * GovernanceRoleAssignment
+    * BusinessCapabilityControls
+    * DigitalServiceImplementation
+    * InformationSupplyChainImplementation
+    * SolutionComponentImplementation
+    * ResponsibilityStaffContact
+    * AssetOwnership
+    * GroupedMedia
+    * IsATypeOfRelationship
