Update roadmap and status to include new interaction styles
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -34,6 +34,17 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
 ??? functional "New View Service: Reference Data OMVS"
     [Reference Data OMVS](/services/omvs/reference-data/overview) supports the query and maintenance of code values and reference data.
 
+??? danger "Rename of Open Connector Framework Wrapper Beans"
+    In order to distinguish the bean names used in the Open Connector Framework (OCF) from the beans used in the Open Metadata Framework (OMF), the Bean Wrapper classes of the OCF have been renamed as follows:
+
+    * ConnectionProperties -> ConnectionDetails
+    * ConnectorTypeProperties -> ConnectorTypeDetails
+    * EndpointProperties -> EndpointDetails
+    * EmbeddedConnectionProperties -> EmbeddedConnectionDetails
+    * RelatedAssetProperties -> RelatedAssetDetails
+    * ConnectedAssetProperties -> ConnectedAssetDetails
+    * VirtualConnectionProperties -> VirtualConnectionDetails
+
 ??? danger "Removal of deprecated types and attributes"
     As Egeria has developed over the years, the type system has also evolved.  This has meant that some of the original types have been deprecated in favour of new types.  At this point in time, none of the egeria code (either in the Java runtime, samples or python pyegeria libraries) and so this is a good time to slim down the type system by removing the deprecated types and attributes.  The following has been removed:
     
