--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -22,17 +22,7 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
 ??? functional "New View Service: Classification Explorer OMVS"
     [Classification Explorer OMVS](/services/omvs/classification-explorer/overview) supports enables the caller to issue queries to understand how metadata elements are linked and classified.
 
-??? functional "New View Service: Governance Officer OMVS"
-    [Governance Officer OMVS](/services/omvs/governance-officer/overview) supports the maintenance of the metadata for a governance domain.
-
-??? functional "New View Service: Notification Manager OMVS"
-    [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [ToDos](/concepts/to-do) and [IncidentReports](/concepts/incident-report).
-
-??? functional "New View Service: Data Discovery OMVS"
-    [Data Discovery OMVS](/services/omvs/data-discovery/overview) supports the creation of data specs and saved searches.
-
-??? functional "New View Service: Reference Data OMVS"
-    [Reference Data OMVS](/services/omvs/reference-data/overview) supports the query and maintenance of code values and reference data.
+??? info "Increased resilience in error handling"
 
 ??? danger "Rename of Open Connector Framework Wrapper Beans"
     In order to distinguish the bean names used in the Open Connector Framework (OCF) from the beans used in the Open Metadata Framework (OMF), the Bean Wrapper classes of the OCF have been renamed as follows:
@@ -108,3 +98,4 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * AssetOwnership
     * GroupedMedia
     * IsATypeOfRelationship
+    * DataContentForDataSet
