--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.3 (March 2025)
+## Release 5.3 (April 2025)
 
 _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is released**_
 
@@ -12,9 +12,13 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * The [*SolutionComponent*](/types/7/0730-Solution-Components) entity has a new attribute called *solutionComponentType* to allow the solution architect to distinguish between different types of components.
     * The [*InformationSupplyChain*](/types/7/0720-Information-Supply-Chains) relationship has a new attribute called *label* for use in lineage graphs.
     * The [*SolutionLinkingWire*](/types/7/0735-Solution-Posts-and-Wires) relationship has new attributes *label* and *description* for use in lineage graphs.
-    * The [*FileSystem*](/types/0/0056-Resource-Managers) classification has new attributes *canonicalMountPoint* and *actualMountPoint* for normalizing file path names in a heterogeneous open metadata ecosystem.
+    * The [*FileSystem*](/types/0/0056-Resource-Managers) classification has new attributes *canonicalMountPoint* and *localMountPoint* for normalizing file path names in a heterogeneous open metadata ecosystem.
     * A new relationship called [*DataMapping*](/types/7/0770-Lineage-Mapping) provides a dedicated relationship for fine-grained (column-level) lineage.
     * Types *GovernanceDomainDefinition*, *GovernanceDomainSet*, *GovernanceClassificationLevel*, *GovernanceClassificationSet*, *GovernanceStatusSet* and *GovernanceStatusLevel* have been deprecated in favour of using standard valid metadata values.
+    * New types for describing data dictionaries and data specifications are available in models [0580 Data Dictionaries](/types/5/0580-Data-Dictionaries) and [0581 Data Field Implementation](/types/5/0581-Data-Field-Implementation).
+
+??? functional "Updated View Service: Project Manager OMVS"
+    The Project Manager OMVS now has a new call to retrieve a project with its dependent projects, resources and assigned people.  This is supplied as nested JSON and also as a mermaid graph.
 
 ??? functional "New View Service: Solution Architect OMVS"
     [Solution Architect OMVS](/services/omvs/solution-architect/overview) supports the management and querying of [Information Supply Chains](/concepts/information-supply-chain) and [solution components](/concepts/solution-component).
