Tidy up data field oritented types
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -105,3 +105,9 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * GroupedMedia
     * IsATypeOfRelationship
     * DataContentForDataSet
+    * PrimaryCategory
+    * DataFieldValues
+    * ExternalGlossaryLink
+    * ExternallySourceGlossary
+    * LibraryCategoryReference
+    * LibraryTermReference
