--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -18,6 +18,7 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * New types for describing data dictionaries and data specifications are available in models [0580 Data Dictionaries](/types/5/0580-Data-Dictionaries) and [0581 Data Field Implementation](/types/5/0581-Data-Field-Implementation).
     * The [CommentType](/types/1/0150-Feedback) has a new valid value of "REQUIREMENT".
     * The [ProjectCharter](/types/4/0442-Project-Charter) entity now has a display name.
+    * The [Anchors](/types/0/0010-Base-Model) has a new attribute called *anchorScopeGUID*.  It is used to identify an element that scopes/groups/owns the anchor element. For example, a glossary term is is own anchor and its anchor scope GUID is its owning glossary.  This attribute allows fast scope based searches.
 
 ??? functional "Updated View Service: Project Manager OMVS"
     The Project Manager OMVS now has a new call to retrieve a project with its dependent projects, resources and assigned people.  This is supplied as nested JSON and also as a mermaid graph.
@@ -40,6 +41,27 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * RelatedAssetProperties -> RelatedAssetDetails
     * ConnectedAssetProperties -> ConnectedAssetDetails
     * VirtualConnectionProperties -> VirtualConnectionDetails
+
+??? danger "Reversal of open metadata relationship ends"
+    The following relationships have had their ends reversed (ie what was end 1 is now end 2 and vice versa).  This is to ensure the graph visualizations makes sense and to ensure that operations that use the anchor support (such as delete element) are able to reliably navigate to dependent elements by travelling from end1 to end2.  The update is permitted because these relationships are not known to be in use.
+       * AssetLocation
+       * TeamLeadership
+       * TeamMembership
+       * PersonRoleAppointment
+       * TeamRoleAppointment
+       * ITRoleAppointment
+       * Meetings
+       * NoteLogAuthorship
+       * GovernanceDefinitionScope
+       * GovernedBy
+       * GovernanceResponsibilityAssignment
+       * GovernanceDefinitionMetric
+       * SchemaTypeImplementation
+       * DesignModelElementsInScope
+    
+    The following relationships have been deprecated and replaced.  The replacements have swapped ends for the same reasons as above.  However, the deprecated relationships are currently in use and the new types allow elements using these relationships to still operate correctly, giving time to migrate them to the new relationships.
+       * ConnectionToAsset replaced by AssetConnection
+       * ConnectionEndpoint replaced by ConnectToEndpoint
 
 ??? danger "Removal of deprecated types and attributes"
     As Egeria has developed over the years, the type system has also evolved.  This has meant that some of the original types have been deprecated in favour of new types.  At this point in time, none of the egeria code (either in the Java runtime, samples or python pyegeria libraries) and so this is a good time to slim down the type system by removing the deprecated types and attributes.  The following has been removed:
