Add outline of Data Designer OMVS
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -24,7 +24,10 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     The Project Manager OMVS now has a new call to retrieve a project with its dependent projects, resources and assigned people.  This is supplied as nested JSON and also as a mermaid graph.
 
 ??? functional "New View Service: Solution Architect OMVS"
-    [Solution Architect OMVS](/services/omvs/solution-architect/overview) supports the management and querying of [Information Supply Chains](/concepts/information-supply-chain) and [solution components](/concepts/solution-component).
+    [Solution Architect OMVS](/services/omvs/solution-architect/overview) supports the management and querying of [Information Supply Chains](/concepts/information-supply-chain) and [Solution Components](/concepts/solution-component).
+
+??? functional "New View Service: Data Designer OMVS"
+    [Data Designer OMVS](/services/omvs/data-designer/overview) supports the management and querying of [Data Structures](/concepts/data-structure), [Data Fields](/concepts/data-field) and [data classes](/concepts/data-class).
 
 ??? functional "New View Service: Classification Explorer OMVS"
     [Classification Explorer OMVS](/services/omvs/classification-explorer/overview) supports enables the caller to issue queries to understand how metadata elements are linked and classified.
