--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -19,6 +19,10 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * The [CommentType](/types/1/0150-Feedback) has a new valid value of "REQUIREMENT".
     * The [ProjectCharter](/types/4/0442-Project-Charter) entity now has a display name.
     * The [Anchors](/types/0/0010-Base-Model) has a new attribute called *anchorScopeGUID*.  It is used to identify an element that scopes/groups/owns the anchor element. For example, a glossary term is is own anchor and its anchor scope GUID is its owning glossary.  This attribute allows fast scope based searches.
+    * The [GlossaryTerm](/types/3/0330-Terms) has a new attribute called *aliases*.  It is used to identify alternative names for the glossary term.
+
+??? functional "Cascaded Delete"
+    --8<-- "snippets/features/delete/cascaded-delete-intro.md"
 
 ??? functional "Updated View Service: Project Manager OMVS"
     The Project Manager OMVS now has a new call to retrieve a project with its dependent projects, resources and assigned people.  This is supplied as nested JSON and also as a mermaid graph.
