Add new data definition relationships
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -15,7 +15,9 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * The [*FileSystem*](/types/0/0056-Resource-Managers) classification has new attributes *canonicalMountPoint* and *localMountPoint* for normalizing file path names in a heterogeneous open metadata ecosystem.
     * A new relationship called [*DataMapping*](/types/7/0770-Lineage-Mapping) provides a dedicated relationship for fine-grained (column-level) lineage.
     * Types *GovernanceDomainDefinition*, *GovernanceDomainSet*, *GovernanceClassificationLevel*, *GovernanceClassificationSet*, *GovernanceStatusSet* and *GovernanceStatusLevel* have been deprecated in favour of using standard valid metadata values.
-    * New types for describing data dictionaries and data specifications are available in models [0580 Data Dictionaries](/types/5/0580-Data-Dictionaries) and [0581 Data Field Implementation](/types/5/0581-Data-Field-Implementation).
+    * New types for describing data dictionaries and data specifications are available in models [0580 Data Dictionaries](/types/5/0580-Data-Dictionaries) and [0581 Data Field Implementation](/types/5/0581-Data-Field-Implementation).  
+    * The definition for a data class and the relationships associated with them have been updated in model [0540 Data Classes](/types/5/0540-Data-Classes).
+    * There is a new relationship called [SemanticDefinition](/types/3/0370-Semantic-Assignment) to allow glossary terms to be attached to data definitions to provide a semantic definition to the data definition.
     * The [CommentType](/types/1/0150-Feedback) has a new valid value of "REQUIREMENT".
     * The [ProjectCharter](/types/4/0442-Project-Charter) entity now has a display name.
     * The [Anchors](/types/0/0010-Base-Model) has a new attribute called *anchorScopeGUID*.  It is used to identify an element that scopes/groups/owns the anchor element. For example, a glossary term is is own anchor and its anchor scope GUID is its owning glossary.  This attribute allows fast scope based searches.
