Add units attribute to DataField
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -22,6 +22,8 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * The [ProjectCharter](/types/4/0442-Project-Charter) entity now has a display name.
     * The [Anchors](/types/0/0010-Base-Model) has a new attribute called *anchorScopeGUID*.  It is used to identify an element that scopes/groups/owns the anchor element. For example, a glossary term is is own anchor and its anchor scope GUID is its owning glossary.  This attribute allows fast scope based searches.
     * The [GlossaryTerm](/types/3/0330-Terms) has a new attribute called *aliases*.  It is used to identify alternative names for the glossary term.
+    * The *position* attribute in the team roles [(model 0119)](/types/1/0119-Team-Roles) has been renamed to *positionName* to avoid confusion with the integer *position* attribute found in various data/schema definitions.
+    * The *position*, *minCardinality* and *maxCardinality* attributes in the [SchemaAttribute](/types/5/0505-Schema-Attribute) entity has been moved to the **AttributeForSchema** and **NestedSchemaAttribute** relationships to match the style of [DataFields](/types/5/0581-Data-Field-Implementation).
 
 ??? functional "Cascaded Delete"
     --8<-- "snippets/features/delete/cascaded-delete-intro.md"
